<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gisbert.it.pedidos.actividad.OrdenDetalleActivity"
    android:background="@color/Fondo">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tipo_pedido"
        android:id="@+id/tipo_pedido_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/Etiquetas"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tipo_pedido"
        android:layout_toEndOf="@+id/proveedor_pedido_label"
        android:layout_above="@+id/proveedor_pedido_label"
        android:layout_toRightOf="@+id/proveedor_pedido_label"
        android:layout_marginLeft="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/TextoUsuario"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/proveedor_label"
        android:id="@+id/proveedor_pedido_label"
        android:layout_below="@+id/tipo_pedido_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/Etiquetas"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/proveedor_pedido"

        android:linksClickable="true"
        android:layout_toEndOf="@+id/proveedor_pedido_label"
        android:layout_alignTop="@+id/proveedor_pedido_label"
        android:layout_alignRight="@+id/tipo_pedido"
        android:layout_alignEnd="@+id/tipo_pedido"
        android:textColor="@color/TextoUsuario"
        android:layout_alignLeft="@+id/tipo_pedido"
        android:layout_alignStart="@+id/tipo_pedido"
        android:onClick="onClick_Tecnico"
        android:backgroundTintMode="src_over"
        android:textSize="15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vendedor_pedido_label"
        android:id="@+id/vendedor_pedido_label"
        android:layout_below="@+id/proveedor_pedido_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/Etiquetas"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/vendedor_pedido"
        android:linksClickable="true"
        android:layout_toEndOf="@+id/vendedor_pedido_label"
        android:layout_alignTop="@+id/vendedor_pedido_label"
        android:layout_alignRight="@+id/proveedor_pedido"
        android:layout_alignEnd="@+id/proveedor_pedido"
        android:textColor="@color/TextoUsuario"
        android:layout_alignLeft="@+id/proveedor_pedido"
        android:layout_alignStart="@+id/proveedor_pedido"
        android:onClick="onClick_Cliente"
        android:textColorLink="@color/Fondo"
        android:textIsSelectable="true"
        android:textSize="15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/valor_pedido_label"
        android:id="@+id/valor_pedido"
        android:layout_below="@+id/vendedor_pedido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/Etiquetas"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_orden_equipo"
        android:layout_alignBottom="@+id/valor_pedido"
        android:layout_alignLeft="@+id/vendedor_pedido"
        android:layout_alignStart="@+id/vendedor_pedido"
        android:layout_alignRight="@+id/vendedor_pedido"
        android:layout_alignEnd="@+id/vendedor_pedido"
        android:textColor="@color/TextoUsuario"
        android:onClick="onClick_Equipos"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/estado_pedido_label"
        android:id="@+id/estado_pedido_label"
        android:layout_below="@+id/valor_pedido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/Etiquetas"
        android:textIsSelectable="false"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/estado_pedido"
        android:layout_alignBottom="@+id/estado_pedido_label"
        android:layout_alignLeft="@+id/textView_orden_equipo"
        android:layout_alignStart="@+id/textView_orden_equipo"
        android:layout_alignRight="@+id/textView_orden_equipo"
        android:layout_alignEnd="@+id/textView_orden_equipo"
        android:textColor="@color/TextoUsuario"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sucursal_pedido_label"
        android:id="@+id/sucursal_pedido_label"
        android:layout_below="@+id/estado_pedido_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/Etiquetas"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/sucursal_pedido"
        android:layout_alignTop="@+id/sucursal_pedido_label"
        android:layout_alignLeft="@+id/estado_pedido"
        android:layout_alignStart="@+id/estado_pedido"
        android:layout_alignRight="@+id/estado_pedido"
        android:layout_alignEnd="@+id/estado_pedido"
        android:singleLine="false"
        android:minLines="2"
        android:maxLines="10"
        android:textColor="@color/TextoUsuario"
        android:layout_alignBottom="@+id/sucursal_pedido_label"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/urgencia_pedido_label"
        android:id="@+id/urgencia_pedido_label"
        android:layout_below="@+id/sucursal_pedido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/Etiquetas"
        android:textIsSelectable="false"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/urgencia_pedido"
        android:layout_alignBottom="@+id/urgencia_pedido_label"
        android:layout_alignLeft="@+id/sucursal_pedido"
        android:layout_alignStart="@+id/sucursal_pedido"
        android:layout_alignRight="@+id/sucursal_pedido"
        android:layout_alignEnd="@+id/sucursal_pedido"
        android:textColor="@color/TextoUsuario"
        android:textIsSelectable="false"
        android:textSize="15sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fecha_hora"
        android:id="@+id/timestamp_pedido_label"
        android:layout_below="@+id/urgencia_pedido_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/Etiquetas"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/timestamp_pedido"
        android:textColor="@color/TextoUsuario"
        android:textIsSelectable="false"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/orservaciones_pedido_label"
        android:layout_alignTop="@+id/timestamp_pedido_label"
        android:layout_alignRight="@+id/sucursal_pedido"
        android:layout_alignEnd="@+id/sucursal_pedido"
        android:layout_alignLeft="@+id/sucursal_pedido"
        android:layout_alignStart="@+id/sucursal_pedido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/observaciones_pedido_label"
        android:id="@+id/orservaciones_pedido_label"
        android:layout_below="@+id/timestamp_pedido_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/Etiquetas"
        android:textSize="15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/observaciones_pedido"
        android:singleLine="false"
        android:minLines="2"
        android:maxLines="10"
        android:textColor="@color/TextoUsuario"
        android:layout_toRightOf="@+id/orservaciones_pedido_label"
        android:layout_alignTop="@+id/orservaciones_pedido_label"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_alignRight="@+id/timestamp_pedido"
        android:layout_alignEnd="@+id/timestamp_pedido"
        android:layout_above="@+id/ver_items_button"
        android:layout_marginBottom="10dp" />





    <Button
        android:layout_width="1500dp"
        android:layout_height="wrap_content"
        android:text="@string/ver_items"
        android:id="@+id/ver_items_button"
        android:background="@color/FondoBoton"
        android:textColor="@color/TextoBoton"
        android:onClick="onClickButton_VerItems"
        android:layout_above="@+id/btn_estado"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/pedidoDetalle_estado"
        android:id="@+id/btn_estado"
        android:background="@color/FondoBoton"
        android:textColor="@color/TextoBoton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>